htmx: restore kotlinx.html for "list-item" as I found a workaround
Backend responds with `<ol><li></li></ol>` but I can use htmx's
hx-select attribute to ignore other elements but the <li>.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,7 @@
         th:id="'listItem' + ${item.id}"
         th:hx-get="'/htmx/list-item/' + ${item.id}"
         hx-swap="outerHTML"
+        hx-select="li"
         th:text="'List item ' + ${item.id} + ' updated at ' + ${item.time}">
     </li>
 </ol>
